[Day5] 1-14 당근 마켓 clone 만들어보기 - html상으로 경로 이동을 위해 만들어진 것

--- a/mainAssignment/static/chat.html
+++ b/mainAssignment/static/chat.html
@@ -7,31 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
 <!--    <link rel="stylesheet" href="css/style.css">-->
-    <link rel="stylesheet" href="../static/css/header.css">
-    <link rel="stylesheet" href="../static/css/main.css">
-    <link rel="stylesheet" href="../static/css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <header>
     <div class="info-bar">
         <div class="info-bar__time">20:55</div>
         <div class="info-bar__icons">
-            <img src="../static/asset/header/chart-bar.svg" alt="chart-bar" />
-            <img src="../static/asset/header/wi-fi.svg" alt="wi-fi" />
-            <img src="../static/asset/header/battery.svg" alt="battery" />
+            <img src="asset/header/chart-bar.svg" alt="chart-bar" />
+            <img src="asset/header/wi-fi.svg" alt="wi-fi" />
+            <img src="asset/header/battery.svg" alt="battery" />
         </div>
     </div>
     <div class="menu-bar">
         <div class="menu-bar__location">
             <div>역삼1동</div>
             <div class="menu-bar__location-icon">
-                <img src="../static/asset/header/arrow.svg" alt="arrow" />
+                <img src="asset/header/arrow.svg" alt="arrow" />
             </div>
         </div>
         <div class="menu-bar__icons">
-            <img src="../static/asset/header/search.svg" alt="search" />
-            <img src="../static/asset/header/menu.svg" alt="menu" />
-            <img src="../static/asset/header/alert.svg" alt="alert" />
+            <img src="asset/header/search.svg" alt="search" />
+            <img src="asset/header/menu.svg" alt="menu" />
+            <img src="asset/header/alert.svg" alt="alert" />
         </div>
     </div>
     <!--        bem(block, element, modify)명명법-->
@@ -54,9 +54,11 @@
 <footer>
     <div class="footer-block">
         <div class="footer-icons">
-            <div class="footer-icons__img">
-                <img src="../static/asset/footer/home-select.svg" alt="home" />
-            </div>
+            <a href="/">
+                <div class="footer-icons__img">
+                    <img src="asset/footer/home-normal.svg" alt="home" />
+                </div>
+            </a>
             <div class="footer-icons__desc">
                 홈
             </div>
@@ -64,7 +66,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../static/asset/footer/country-normal.svg" alt="country" />
+                <img src="asset/footer/country-normal.svg" alt="country" />
             </div>
             <div class="footer-icons__desc">
                 동네생활
@@ -73,7 +75,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../static/asset/footer/location-normal.svg" alt="location" />
+                <img src="asset/footer/location-normal.svg" alt="location" />
             </div>
             <div class="footer-icons__desc">
                 내 근처
@@ -83,7 +85,7 @@
         <div class="footer-icons">
             <a href="/chat">
                 <div class="footer-icons__img">
-                    <img src="../static/asset/footer/chat-normal.svg" alt="chat" />
+                    <img src="asset/footer/chat-select.svg" alt="chat" />
                 </div>
             </a>
             <div class="footer-icons__desc">
@@ -93,7 +95,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="../static/asset/footer/user-normal.svg" alt="user" />
+                <img src="asset/footer/user-normal.svg" alt="user" />
             </div>
             <div class="footer-icons__desc">
                 나의당근
@@ -105,7 +107,7 @@
 </footer>
 
 <!--<div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
-<script src="../static/app.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
