--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="shortcut icon" href="#" />
 </head>
 <body>
     <header>
@@ -114,7 +115,7 @@
 
             <div class="footer-icons" id="chatting-tap">
                 <div class="footer-icons__img">
-                    <a href="../templates/chat.html" onclick="moveChat()">
+                    <a href="chat.html" onclick="window.location.href='/chat'">
                         <img src="asset/footer/chat-normal.svg" alt="chat" />
                     </a>
                 </div>
