--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -137,7 +137,7 @@
 
     </footer>
 
-    <div class="media-info-msg">화면의 크기를 줄여주세요</div>
+<!--    <div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
     <script src="app.js"></script>
 </body>
 
