[Day5] 1-14 당근 마켓 clone 만들어보기 - chatting view 만들기

--- a/mainAssignment/static/chat.html
+++ b/mainAssignment/static/chat.html
@@ -40,14 +40,15 @@
 
 <main>
     <!--        default setting-->
-    <div></div>
     <div class="chat-channel">
+        <div>
+            <ul id="chat-ul"></ul>
+        </div>
 
     </div>
-    <ul id="chat-ul"></ul>
     <div class="msg-bar">
         <form id="chat-form">
-            <input class="msg-bar-icon"
+            <input class="msg-bar-plus"
                    type="image"
                    name="chatFile"
                    src="asset/main/chat/plus.svg"
@@ -55,19 +56,21 @@
                    alt="plus" />
             <label for="send-message"> </label>
             <input type="text"
-                 id="send-message"
-                 placeholder="메시지 보내기"
-                 required
+                   id="send-message"
+                   placeholder="메시지 보내기"
+                   required
             />
-            <input class="msg-bar-icon"
+            <input class="msg-bar-submit"
                    type="image"
                    name="submit"
                    src="asset/main/chat/sendMsg.svg"
                    id="chat-submit"
                    alt="submit" />
         </form>
-
     </div>
+
+
+
 </main>
 
 <footer>
