--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -81,7 +81,7 @@
                 <div class="item-list__info-price">100만원</div>
             </div>
         </div>
-        <div class="write-btn">+글쓰기</div>
+        <a class="write-btn" href="write.html" onclick="window.location.href='/chat'" >+글쓰기</a>
     </main>
 
     <footer>
