--- a/mainAssignment/static/write.html
+++ b/mainAssignment/static/write.html
@@ -11,23 +11,23 @@
 <body>
     <form>
         <div>
-            <label for="">이미지</label>
+            <label for="image">이미지</label>
             <input type="file" id="image" name="image"/>
         </div>
         <div>
-            <label for="">제목</label>
+            <label for="title">제목</label>
             <input type="text" id="title" name="title"/>
         </div>
         <div>
-            <label for="">가격</label>
+            <label for="price">가격</label>
             <input type="number" id="price" name="price"/>
         </div>
         <div>
-            <label for="">설명</label>
+            <label for="description">설명</label>
             <input type="text" id="description" name="description"/>
         </div>
         <div>
-            <label for="">장소</label>
+            <label for="place">장소</label>
             <input type="text" id="place"  name="place"/>
         </div>
     </form>
