--- a/mainAssignment/static/write.html
+++ b/mainAssignment/static/write.html
@@ -9,18 +9,18 @@
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
-    <form>
+    <form id="write-form">
         <div>
             <label for="image">이미지</label>
             <input type="file" id="image" name="image"/>
         </div>
         <div>
             <label for="title">제목</label>
-            <input type="text" id="title" name="title"/>
+            <input type="text" id="title" name="title" required/>
         </div>
         <div>
             <label for="price">가격</label>
-            <input type="number" id="price" name="price"/>
+            <input type="number" id="price" name="price" required/>
         </div>
         <div>
             <label for="description">설명</label>
@@ -30,6 +30,17 @@
             <label for="place">장소</label>
             <input type="text" id="place"  name="place"/>
         </div>
+        <div>
+            <button type="submit" id="write-submit-button">제출</button>
+        </div>
+<!--        <input class="msg-bar-submit"-->
+<!--               type="image"-->
+<!--               name="submit"-->
+<!--               src="asset/main/chat/sendMsg.svg"-->
+<!--               id="chat-submit"-->
+<!--               alt="submit" />-->
     </form>
+
+    <script src="write.js"></script>
 </body>
 </html>
