[Day9] 1-15 당근마켓 clone 만들어보기 - 글쓰기 페이지 구현하기 - web 오류 버그 해결

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -81,7 +81,7 @@
                 <div class="item-list__info-price">100만원</div>
             </div>
         </div>
-        <a class="write-btn" href="write.html" onclick="window.location.href='/chat'" >+글쓰기</a>
+        <a class="write-btn" href="write.html" onclick="window.location.pathname='/items'" >+글쓰기</a>
     </main>
 
     <footer>
@@ -138,7 +138,7 @@
     </footer>
 
 <!--    <div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
-    <script src="app.js"></script>
+<!--    <script src="app.js"></script>-->
 </body>
 
 </html>
