[Day9] 1-15 당근마켓 clone 만들어보기 - 글쓰기 페이지 구현하기 - FRONT-END에서 'GET' 이용해서 DATA값 가져오기

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -51,36 +51,36 @@
             </div>
         </div>
 <!--        default setting-->
-        <div class="item-list">
-            <div class="item-list__img">
-                <img src="asset/main/product1.jpg" alt="image" />
-            </div>
-            <div class="item-list__info">
-                <div class="item-list__info-title">게이밍 pc 팝니다</div>
-                <div class="item-list__info-meta">역삼동 19초 전</div>
-                <div class="item-list__info-price">100만원</div>
-            </div>
-        </div>
-        <div class="item-list">
-            <div class="item-list__img">
-                <img src="asset/main/product2.jpg" alt="image" />
-            </div>
-            <div class="item-list__info">
-                <div class="item-list__info-title">게이밍 pc 팝니다</div>
-                <div class="item-list__info-meta">역삼동 19초 전</div>
-                <div class="item-list__info-price">100만원</div>
-            </div>
-        </div>
-        <div class="item-list">
-            <div class="item-list__img">
-                <img src="asset/main/product3.jpg" alt="image" />
-            </div>
-            <div class="item-list__info">
-                <div class="item-list__info-title">게이밍 pc 팝니다</div>
-                <div class="item-list__info-meta">역삼동 19초 전</div>
-                <div class="item-list__info-price">100만원</div>
-            </div>
-        </div>
+<!--        <div class="item-list">-->
+<!--            <div class="item-list__img">-->
+<!--                <img src="asset/main/product1.jpg" alt="image" />-->
+<!--            </div>-->
+<!--            <div class="item-list__info">-->
+<!--                <div class="item-list__info-title">게이밍 pc 팝니다</div>-->
+<!--                <div class="item-list__info-meta">역삼동 19초 전</div>-->
+<!--                <div class="item-list__info-price">100만원</div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="item-list">-->
+<!--            <div class="item-list__img">-->
+<!--                <img src="asset/main/product2.jpg" alt="image" />-->
+<!--            </div>-->
+<!--            <div class="item-list__info">-->
+<!--                <div class="item-list__info-title">게이밍 pc 팝니다</div>-->
+<!--                <div class="item-list__info-meta">역삼동 19초 전</div>-->
+<!--                <div class="item-list__info-price">100만원</div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="item-list">-->
+<!--            <div class="item-list__img">-->
+<!--                <img src="asset/main/product3.jpg" alt="image" />-->
+<!--            </div>-->
+<!--            <div class="item-list__info">-->
+<!--                <div class="item-list__info-title">게이밍 pc 팝니다</div>-->
+<!--                <div class="item-list__info-meta">역삼동 19초 전</div>-->
+<!--                <div class="item-list__info-price">100만원</div>-->
+<!--            </div>-->
+<!--        </div>-->
         <a class="write-btn" href="write.html" onclick="window.location.pathname='/items'" >+글쓰기</a>
     </main>
 
@@ -138,7 +138,7 @@
     </footer>
 
 <!--    <div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
-<!--    <script src="app.js"></script>-->
+    <script src="index.js"></script>
 </body>
 
 </html>
