--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -40,16 +40,16 @@
 
     <main>
 <!--        default setting-->
-        <div class="item-list">
-            <div class="item-list__img">
-                <img src="asset/main/image.svg" alt="image" />
-            </div>
-            <div class="item-list__info">
-                <div class="item-list__info-title">게이밍 pc 팝니다</div>
-                <div class="item-list__info-meta">역삼동 19초 전</div>
-                <div class="item-list__info-price">100만원</div>
-            </div>
-        </div>
+<!--        <div class="item-list">-->
+<!--            <div class="item-list__img">-->
+<!--                <img src="asset/main/image.svg" alt="image" />-->
+<!--            </div>-->
+<!--            <div class="item-list__info">-->
+<!--                <div class="item-list__info-title">게이밍 pc 팝니다</div>-->
+<!--                <div class="item-list__info-meta">역삼동 19초 전</div>-->
+<!--                <div class="item-list__info-price">100만원</div>-->
+<!--            </div>-->
+<!--        </div>-->
 <!--        default setting-->
 <!--        <div class="item-list">-->
 <!--            <div class="item-list__img">-->
