[Day9] 1-16 당근마켓 clone 만들어보기 - 폴더 경로 변경

--- a/mainAssignment/static/html/chat.html
+++ b/mainAssignment/static/html/chat.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
 <!--    <link rel="stylesheet" href="css/style.css">-->
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/chat.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/chat.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
@@ -17,22 +17,22 @@
     <div class="info-bar">
         <div class="info-bar__time">20:55</div>
         <div class="info-bar__icons">
-            <img src="asset/header/chart-bar.svg" alt="chart-bar" />
-            <img src="asset/header/wi-fi.svg" alt="wi-fi" />
-            <img src="asset/header/battery.svg" alt="battery" />
+            <img src="../asset/header/chart-bar.svg" alt="chart-bar" />
+            <img src="../asset/header/wi-fi.svg" alt="wi-fi" />
+            <img src="../asset/header/battery.svg" alt="battery" />
         </div>
     </div>
     <div class="menu-bar">
         <div class="menu-bar__location">
             <div>역삼1동</div>
             <div class="menu-bar__location-icon">
-                <img src="asset/header/arrow.svg" alt="arrow" />
+                <img src="../asset/header/arrow.svg" alt="arrow" />
             </div>
         </div>
         <div class="menu-bar__icons">
-            <img src="asset/header/search.svg" alt="search" />
-            <img src="asset/header/menu.svg" alt="menu" />
-            <img src="asset/header/alert.svg" alt="alert" />
+            <img src="../asset/header/search.svg" alt="search" />
+            <img src="../asset/header/menu.svg" alt="menu" />
+            <img src="../asset/header/alert.svg" alt="alert" />
         </div>
     </div>
     <!--        bem(block, element, modify)명명법-->
@@ -51,7 +51,7 @@
             <input class="msg-bar-plus"
                    type="image"
                    name="chatFile"
-                   src="asset/main/chat/plus.svg"
+                   src="../asset/main/chat/plus.svg"
                    id="chat-file"
                    alt="plus" />
             <label for="send-message"> </label>
@@ -63,7 +63,7 @@
             <input class="msg-bar-submit"
                    type="image"
                    name="submit"
-                   src="asset/main/chat/sendMsg.svg"
+                   src="../asset/main/chat/sendMsg.svg"
                    id="chat-submit"
                    alt="submit" />
         </form>
@@ -76,9 +76,9 @@
 <footer>
     <div class="footer-block">
         <div class="footer-icons">
-            <a href="/">
+            <a href="/mainAssignment/static">
                 <div class="footer-icons__img">
-                    <img src="asset/footer/home-normal.svg" alt="home" />
+                    <img src="../asset/footer/home-normal.svg" alt="home" />
                 </div>
             </a>
             <div class="footer-icons__desc">
@@ -88,7 +88,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="asset/footer/country-normal.svg" alt="country" />
+                <img src="../asset/footer/country-normal.svg" alt="country" />
             </div>
             <div class="footer-icons__desc">
                 동네생활
@@ -97,7 +97,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="asset/footer/location-normal.svg" alt="location" />
+                <img src="../asset/footer/location-normal.svg" alt="location" />
             </div>
             <div class="footer-icons__desc">
                 내 근처
@@ -106,7 +106,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="asset/footer/chat-select.svg" alt="chat" />
+                <img src="../asset/footer/chat-select.svg" alt="chat" />
             </div>
             <div class="footer-icons__desc">
                 채팅
@@ -115,7 +115,7 @@
 
         <div class="footer-icons">
             <div class="footer-icons__img">
-                <img src="asset/footer/user-normal.svg" alt="user" />
+                <img src="../asset/footer/user-normal.svg" alt="user" />
             </div>
             <div class="footer-icons__desc">
                 나의당근
@@ -127,7 +127,7 @@
 </footer>
 
 <!--<div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
-<script src="app.js"></script>
+<script src="../javaScript/app.js"></script>
 </body>
 
 </html>
