--- a/mainAssignment/static/html/write.html
+++ b/mainAssignment/static/html/write.html
@@ -41,6 +41,6 @@
 <!--               alt="submit" />-->
     </form>
 
-    <script src="write.js"></script>
+    <script src="../javaScript/write.js"></script>
 </body>
 </html>
