--- a/mainAssignment/static/html/signup.html
+++ b/mainAssignment/static/html/signup.html
@@ -8,6 +8,18 @@
     <title>회원 가입</title>
 </head>
 <body>
-
+    <form action="signup.html">
+        <div>
+            <label for="id">아이디</label>
+            <input type="text" id="id" />
+        </div>
+        <div>
+            <label for="password">아이디</label>
+            <input type="password" id="password" />
+        </div>
+        <div>
+            <button type="submit" id="sign-up-submit">회원 가입</button>
+        </div>
+    </form>
 </body>
 </html>
