[Day9] 1-17 당근마켓 clone 만들어보기 - 회원가입 url 변경 (고장나서 수정)

--- a/mainAssignment/static/index.html
+++ b/mainAssignment/static/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>당근 마켓 clone</title>
 <!--    <link rel="stylesheet" href="css/style.css">-->
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
@@ -17,22 +17,22 @@
         <div class="info-bar">
             <div class="info-bar__time">20:55</div>
             <div class="info-bar__icons">
-                <img src="../asset/header/chart-bar.svg" alt="chart-bar" />
-                <img src="../asset/header/wi-fi.svg" alt="wi-fi" />
-                <img src="../asset/header/battery.svg" alt="battery" />
+                <img src="asset/header/chart-bar.svg" alt="chart-bar" />
+                <img src="asset/header/wi-fi.svg" alt="wi-fi" />
+                <img src="asset/header/battery.svg" alt="battery" />
             </div>
         </div>
         <div class="menu-bar">
             <div class="menu-bar__location">
                 <div>역삼1동</div>
                 <div class="menu-bar__location-icon">
-                    <img src="../asset/header/arrow.svg" alt="arrow" />
+                    <img src="asset/header/arrow.svg" alt="arrow" />
                 </div>
             </div>
             <div class="menu-bar__icons">
-                <img src="../asset/header/search.svg" alt="search" />
-                <img src="../asset/header/menu.svg" alt="menu" />
-                <img src="../asset/header/alert.svg" alt="alert" />
+                <img src="asset/header/search.svg" alt="search" />
+                <img src="asset/header/menu.svg" alt="menu" />
+                <img src="asset/header/alert.svg" alt="alert" />
             </div>
         </div>
 <!--        bem(block, element, modify)명명법-->
@@ -81,14 +81,14 @@
 <!--                <div class="item-list__info-price">100만원</div>-->
 <!--            </div>-->
 <!--        </div>-->
-        <a class="write-btn" href="write.html" onclick="window.location.pathname='/items'" >+글쓰기</a>
+        <a class="write-btn" href="html/write.html" onclick="window.location.pathname='/items'" >+글쓰기</a>
     </main>
 
     <footer>
         <div class="footer-block">
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/home-select.svg" alt="home" />
+                    <img src="asset/footer/home-select.svg" alt="home" />
                 </div>
                 <div class="footer-icons__desc">
                     홈
@@ -97,7 +97,7 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/country-normal.svg" alt="country" />
+                    <img src="asset/footer/country-normal.svg" alt="country" />
                 </div>
                 <div class="footer-icons__desc">
                     동네생활
@@ -106,7 +106,7 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/location-normal.svg" alt="location" />
+                    <img src="asset/footer/location-normal.svg" alt="location" />
                 </div>
                 <div class="footer-icons__desc">
                     내 근처
@@ -115,8 +115,8 @@
 
             <div class="footer-icons" id="chatting-tap">
                 <div class="footer-icons__img">
-                    <a href="chat.html" onclick="window.location.href='/chat'">
-                        <img src="../asset/footer/chat-normal.svg" alt="chat" />
+                    <a href="html/chat.html" onclick=" window.location.href='/chat'">
+                        <img src="asset/footer/chat-normal.svg" alt="chat" />
                     </a>
                 </div>
                 <div class="footer-icons__desc">
@@ -126,7 +126,9 @@
 
             <div class="footer-icons">
                 <div class="footer-icons__img">
-                    <img src="../asset/footer/user-normal.svg" alt="user" />
+                    <a href="html/signup.html" onclick=" window.location.href='/signup'">
+                        <img src="asset/footer/user-normal.svg" alt="user" />
+                    </a>
                 </div>
                 <div class="footer-icons__desc">
                     나의당근
@@ -138,7 +140,7 @@
     </footer>
 
 <!--    <div class="media-info-msg">화면의 크기를 줄여주세요</div>-->
-    <script src="../javaScript/index.js"></script>
+    <script src="javaScript/index.js"></script>
 </body>
 
 </html>
