--- a/mainAssignment/static/html/signup.html
+++ b/mainAssignment/static/html/signup.html
@@ -6,16 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>회원 가입</title>
+    <link rel="shortcut icon" href="#" />
 </head>
 <body>
-    <form action="signup.html">
+    <form action="/signup" method="POST">
         <div>
             <label for="id">아이디</label>
-            <input type="text" id="id" />
+            <input type="text" id="id" name="id"/>
         </div>
         <div>
             <label for="password">아이디</label>
-            <input type="password" id="password" />
+            <input type="password" id="password" name="password"/>
         </div>
         <div>
             <button type="submit" id="sign-up-submit">회원 가입</button>
