[Day9] 1-17 당근마켓 clone 만들어보기 - 회원가입 form 생성

--- a/mainAssignment/static/html/signup.html
+++ b/mainAssignment/static/html/signup.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
-    <form action="/signup" method="POST">
+    <form id="sing-up-form" action="/signup" method="POST">
         <div>
             <label for="id">아이디</label>
             <input type="text" id="id" name="id"/>
@@ -22,5 +22,6 @@
             <button type="submit" id="sign-up-submit">회원 가입</button>
         </div>
     </form>
+<script src="../javaScript/signup.js"></script>
 </body>
 </html>
