--- a/mainAssignment/static/html/signup.html
+++ b/mainAssignment/static/html/signup.html
@@ -9,19 +9,21 @@
     <link rel="shortcut icon" href="#" />
 </head>
 <body>
-    <form id="sing-up-form" action="/signup" method="POST">
+    <form id="sign-up-form" method="POST" action="/signup">
         <div>
             <label for="id">아이디</label>
             <input type="text" id="id" name="id"/>
         </div>
         <div>
-            <label for="password">아이디</label>
+            <label for="password">비밀 번호</label>
             <input type="password" id="password" name="password"/>
         </div>
         <div>
             <button type="submit" id="sign-up-submit">회원 가입</button>
         </div>
     </form>
-<script src="../javaScript/signup.js"></script>
+    <!-- sha256 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
+    <script src="../javaScript/signup.js"></script>
 </body>
 </html>
