[Day9] 1-17 당근마켓 clone 만들어보기 - page 에서 각 html 로 이동하는 것 구현 완료 (버그 수정)

--- a/mainAssignment/static/html/chat.html
+++ b/mainAssignment/static/html/chat.html
@@ -76,7 +76,7 @@
 <footer>
     <div class="footer-block">
         <div class="footer-icons">
-            <a href="/mainAssignment/static">
+            <a href="/">
                 <div class="footer-icons__img">
                     <img src="../asset/footer/home-normal.svg" alt="home" />
                 </div>
@@ -114,9 +114,11 @@
         </div>
 
         <div class="footer-icons">
-            <div class="footer-icons__img">
-                <img src="../asset/footer/user-normal.svg" alt="user" />
-            </div>
+            <a href="signup.html">
+                <div class="footer-icons__img">
+                    <img src="../asset/footer/user-normal.svg" alt="user" />
+                </div>
+            </a>
             <div class="footer-icons__desc">
                 나의당근
             </div>
