--- a/mainAssignment/static/html/login.html
+++ b/mainAssignment/static/html/login.html
@@ -37,7 +37,19 @@
     </header>
 
     <main>
-
+        <form method="POST">
+            <div>
+                <label for="user-id">id</label>
+                <input id="user-id" name="user-id" type="text" placeholder="아이디 입력" required />
+            </div>
+            <div>
+                <label for="password">password</label>
+                <input id="password" name="password" type="password" placeholder="비밀번호 입력" required/>
+            </div>
+            <div>
+                <button type="submit">로그인</button>
+            </div>
+        </form>
 
 
     </main>
