--- a/mainAssignment/static/html/login.html
+++ b/mainAssignment/static/html/login.html
@@ -49,6 +49,10 @@
             <div>
                 <button type="submit">로그인</button>
             </div>
+
+            <div id="info">
+
+            </div>
         </form>
 
 
